part3/3.03-3.10/project-frontend/dwk-front/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: project-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-frontend
  template:
    metadata:
      labels:
        app: project-frontend
    spec:
      containers:
        - name: project-frontend
          image: PROJECT/IMAGE
          resources:
            limits:
              cpu: "150m"
              memory: "100Mi"
