part3/3.03-3.10/project-frontend/dwk-front/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: project-frontend-svc
spec:
  type: NodePort
  selector:
    app: project-frontend
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 80
